--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,3 +26,4 @@
 @use 'components/loading-indicator';
 @use 'components/weather-alerts';
 @use 'components/alert-detail-panel';
+@use 'components/city-search-modal';
